2012-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_begin): Missing type check added, otherwise
	passing in an object that is not a hash results in corruption
	or crashing behavior.

	* lib.c (class_check): Improved to a one-step check with a clear
	message.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 55

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_modplace): Fix warning caught by gcc, but not g++.

	* lib.c (replace_list): Fix code that is valid C++ but not C.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (replace_list): Always convert the input items to a list,
	even in the trivial case that an empty list is being replaced.
	Allow a string to be the replacement (split into a list of
	characters).
	(replace_str): Bugfix in assignment from vector; wrong index
	used over source vector.
	(split_str): If the splitting set is empty, just split the
	string into characters instead of getting into an infinite loop.
	(replace_vec): Allow replacement source to be a string.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus, minus): Better wording in error messages.

	* eval.c (dwim_loc): Assignments to string indices and ranges
	supported. New arguments for this purpose.
	(op_modplace): Use new dwim_loc interface for returned value.
	(op_dwim): Support assignment to string ranges.
	(eval_init): replace_str registered.

	* lib.c (string_extend): If the argument is a number, let it
	specify the amount by which to extend the string.
	(replace_str): New function.

	* lib.h (replace_str): Declared.

	* txr.1: Updated.

	* txr.vim: Updated.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (listref, listref_l): Negative indices must have semantics
	consistent with vecref and ranges.

2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (cat_str): Throw error if one of the list elements